--- a/index.html
+++ b/index.html
@@ -59,21 +59,19 @@
       <!-- Герой -->
       <section class="hero centered">
         <div class="container">
-          <div class="hero-desription">
-            <h1 class="section-hero-title text-hero-title">
-              Ефективні рішення для вашого бізнесу
-            </h1>
-            <button class="section-hero-button button" type="button">
-              Замовити послугу
-            </button>
-          </div>
+          <h1 class="section-hero-title text-hero-title">
+            Ефективні рішення для вашого бізнесу
+          </h1>
+          <button class="section-hero-button button" type="button">
+            Замовити послугу
+          </button>
         </div>
       </section>
       <!-- Переваги -->
       <section class="section-featuers">
         <div class="container">
           <h2 class="section-features-title visually-hidden">Переваги</h2>
-          <ul class="section-features-list list">
+          <ul class="section-features-list section list">
             <li class="item">
               <h3 class="section-features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="section-features-text">
@@ -109,7 +107,7 @@
       <section class="section-work centered">
         <div class="container">
           <h2 class="section-work-title">Чим ми займаємося</h2>
-          <ul class="section-work-list list">
+          <ul class="section-work-list section list">
             <li class="item">
               <img
                 class="section-work-img"
@@ -141,7 +139,7 @@
       <section class="section-team centered">
         <div class="container">
           <h2 class="section-team-title">Наша команда</h2>
-          <ul class="section-team-list list">
+          <ul class="section-team-list section list">
             <li class="team-list-item item">
               <img
                 class="section-team-img"
