--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     </header>
     <main>
       <!-- Герой -->
-      <section class="section-progects">
+      <section class="section-progects section">
         <div class="container">
           <h1 class="section-filter-title visually-hidden">Фільтр</h1>
           <ul class="section-filter-list list">
@@ -79,8 +79,6 @@
               </button>
             </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="progects-list list">
             <li class="progects-item-list item">
               <a class="progect-link link" href="#">
