--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </div>
       </section>
       <!-- Переваги -->
-      <section class="section-featuers">
+      <section class="section-featuers section">
         <div class="container">
           <h2 class="section-features-title visually-hidden">Переваги</h2>
-          <ul class="section-features-list section list">
+          <ul class="section-features-list list">
             <li class="item">
               <h3 class="section-features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="section-features-text">
@@ -104,10 +104,10 @@
         </div>
       </section>
       <!-- Чим займаємось -->
-      <section class="section-work centered">
+      <section class="section-work centered section">
         <div class="container">
           <h2 class="section-work-title">Чим ми займаємося</h2>
-          <ul class="section-work-list section list">
+          <ul class="section-work-list list">
             <li class="item">
               <img
                 class="section-work-img"
@@ -136,10 +136,10 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="section-team centered">
+      <section class="section-team section centered">
         <div class="container">
           <h2 class="section-team-title">Наша команда</h2>
-          <ul class="section-team-list section list">
+          <ul class="section-team-list list">
             <li class="team-list-item item">
               <img
                 class="section-team-img"
