--- a/portfolio.html
+++ b/portfolio.html
@@ -88,8 +88,10 @@
                   alt="Технокряк"
                   width="370"
                 />
-                <h2 class="progect-list-title link">Технокряк</h2>
-                <p class="progect-list-text">Веб-сайт</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">Технокряк</h2>
+                  <p class="progect-list-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -100,10 +102,12 @@
                   alt="Постер"
                   width="370"
                 />
-                <h2 class="progect-list-title link">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="progect-list-text">Дизайн</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="progect-list-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -114,8 +118,10 @@
                   alt="Ресторан Seafood"
                   width="370"
                 />
-                <h2 class="progect-list-title link">Ресторан Seafood</h2>
-                <p class="progect-list-text">Додаток</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">Ресторан Seafood</h2>
+                  <p class="progect-list-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -126,8 +132,10 @@
                   alt="Проєкт Prime"
                   width="370"
                 />
-                <h2 class="progect-list-title link">Проєкт Prime</h2>
-                <p class="progect-list-text">Маркетинг</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">Проєкт Prime</h2>
+                  <p class="progect-list-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -138,8 +146,10 @@
                   alt="Проєкт Boxes"
                   width="370"
                 />
-                <h2 class="progect-list-title link">Проєкт Boxes</h2>
-                <p class="progect-list-text">Додаток</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">Проєкт Boxes</h2>
+                  <p class="progect-list-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -150,10 +160,12 @@
                   alt="Inspiration"
                   width="370"
                 />
-                <h2 class="progect-list-title link">
-                  Inspiration has no Borders
-                </h2>
-                <p class="progect-list-text">Веб-сайт</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="progect-list-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -164,15 +176,21 @@
                   alt=""
                   width="370"
                 />
-                <h2 class="progect-list-title link">Видання Limited Edition</h2>
-                <p class="progect-list-text">Дизайн</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">
+                    Видання Limited Edition
+                  </h2>
+                  <p class="progect-list-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
               <a class="progect-link link" href="/">
                 <img src="./images/image8.jpg" alt="Проєкт LAB" width="370" />
-                <h2 class="progect-list-title">Проєкт LAB</h2>
-                <p class="progect-list-text">Маркетинг</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title">Проєкт LAB</h2>
+                  <p class="progect-list-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="progects-item-list item">
@@ -182,8 +200,10 @@
                   alt="Growing Business"
                   width="370"
                 />
-                <h2 class="progect-list-title link">Growing Business</h2>
-                <p class="progect-list-text">Додаток</p>
+                <div class="img-description">
+                  <h2 class="progect-list-title link">Growing Business</h2>
+                  <p class="progect-list-text">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
